# pii-processor

./: .dockerignore  .env.dz.asc  .env.template  .gitignore  .pre-commit-config.yaml  .run-docker  .tarpaulin.toml  Cargo.toml  Dockerfile  README.md  build-image  check-pre-commit  curl-s3-test.sh  healthcheck.sh  pyproject.toml  run-coverage  run-docker  run-pedantic
.github/workflows/: rust-ci.yml
data/: system_prompt.txt
script/test-proxy/: Cargo.toml  README.md  cache.json  config.yaml  data.json  data.yaml  docker-compose-litellm-config.yaml  example_new_fields.json  input.json  input2.json  out.json  portkey-test.sh  pyproject.toml  run-portkey-gateway.sh  start-proxy.sh  system_prompt.txt  test-curl.sh  test-ollama-extract.sh  test-ollama-models.sh  test-ollama.json  test-ollama.sh  test.go  test.js  test.py  test.rs  test.ts  test.v  worker-pool-test-response.json  worker-pool-test.json
src/: ai_tags.rs  connector.rs  env_vars.rs  event_counter.rs  exit_codes.rs  expanduser.rs  init.rs  init_logging.rs  lib.rs  list_env.rs  llm_caller.rs  llm_handler.rs  log_handler.rs  log_session.py  logging.rs  main.rs  publisher.rs  redact_consumer.rs  reducter.rs  s3ctx.rs  s3error.rs  s3helper.rs  s3operator.rs  secret_string.rs  session_log_models.rs  session_postprocessor.py  starter.rs
src/config/: mod.rs  (+6 more)
tests/: dummy_llm_caller.rs  test_ack.rs  test_brevify.rs  test_brevity.rs  test_consumer.rs  test_content.rs  test_des.rs  test_deserialize.rs  test_env_vars.rs  test_exit_codes.rs  test_expanduser.rs  test_extract_operators.rs  test_get_plain_text.rs  test_init.rs  test_list_env.rs  test_llm_caller.rs  test_llm_processor.rs  test_local_saver.rs  test_log_parse.rs  test_logging.rs  test_nats_admin_and_consumer.rs  test_probe.rs  test_read_prompt.rs  test_redactions.rs  test_s3.rs  test_secret_string.rs  test_serve.rs  test_tracing.rs  test_update_back.rs  test_valid_redactons.rs  test_worker_pool.rs  test_worker_pool_empty.rs  test_worker_pool_log.rs  test_worker_pool_serve.rs
(+90 files in other folders)
