[package]
name = "ductaper"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nats = "0.41.0"
envy = "0.4.2"
reqwest = { version = "0.12.18", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"] }

[dev-dependencies]
httpmock = "0.7.0"


