[package]
name = "ductaper"
version = "0.1.0"
edition = "2024"
default-run = "ductaper"

[profile.dev]
incremental = true

[dependencies]
async-nats = { version = "0.41.0", features = ["server_2_11"] }
envy = "0.4.2"
reqwest = { version = "0.12.18", default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"] }
mime = "0.3.17"
home = "0.5.11"
futures = "0.3.31"
aws-config = "1.6.3"
aws-sdk-s3 = "1.90.0"
aws-credential-types = "1.2.3"
dotenv = "0.15.0"
bytes = "1.10.1"
async-trait = "0.1.88"
color-backtrace = "0.7.0"
async-channel = "2.3.1"
regex = "1.11.1"
url = "2.5.4"


[dev-dependencies]
httpmock = "0.7.0"
serial_test = "3.2.0"
testcontainers = { version = "0.24.0", features = ["http_wait"] }
testcontainers-modules = { version = "0.12.1", features = ["minio"] }


[[bin]]
name = "ductaper"
path = "src/main.rs"


