[project]
name = "ductaper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "requests>=2.32.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[[tool.uv.index]]
url = "https://area22-493334834594.d.codeartifact.eu-west-1.amazonaws.com/pypi/area22/simple/"
